show comments in the navigator, fdo#51859

Change-Id: I967ce4765fdb85263eea4cea5a8728470b32ad82